# drivable-training

./: .gitignore  curb.txt  curb2.txt  curb3.txt  dnn_est.test  dnn_estimator.py  driv.train  driv2.test  driv2.train  driv3.test  driv3.train  drivable.py  sw.txt  sw2.txt  sw3.txt  wall3.txt
robot/: curb3.txt  driv.test  driv3.test  driv3.train  driv4.test  driv4.txt  driv4_2.test  driv5_z.test  driv5_z.train  driv5_z2.test  drivable.py  sw3.txt  wall3.txt
robot/cpp/: CMakeLists.txt  drivable.cpp
robot/data/: driv6.test  driv6.train  driv6.train_org
robot/data/carlos/: carlos.train  carlos_tmp.train  curb.txt  objects.txt  sidewalk.txt  wall.txt
robot/models/1512001010/: saved_model.pbtxt
robot/models/1512004483/: saved_model.pbtxt
robot/models/1512610264/: saved_model.pbtxt
robot/models/1512611065/: saved_model.pbtxt
robot/models/1512611627/: saved_model.pbtxt
robot/models/1512612486/: saved_model.pbtxt
robot/models/1512612563/: saved_model.pbtxt
robot/models/1512695353/: saved_model.pbtxt
robot/models/1513041947/: saved_model.pbtxt
robot/models/1513121344/: saved_model.pbtxt
robot/models/1513123026/: saved_model.pbtxt
robot/models/1513125768/: saved_model.pbtxt
robot/models/1513201903/: saved_model.pbtxt
tf_dnn/: dnn_est.train  dnn_estimator.py
tf_dnn/1511829295/: saved_model.pb
tf_dnn/1511829608/: saved_model.pb
tf_dnn/1511829651/: saved_model.pb
tf_dnn/1511830727/: saved_model.pbtxt
tf_dnn/cpp/: CMakeLists.txt  loader_est.cpp
tf_graph/: CMakeLists.txt  FindProtobuf.cmake  graph.py  loader.cpp
tf_graph/models/: graph.pb
(+72 files in other folders)
